# Avans-SPCPRJ13

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  DEVELOPMENT_GUIDELINES.md  Doxyfile  Makefile  README.md  USAGE.md  Untitled Diagram.drawio  index.html  vcpkg.json
.github/: pull_request_template.md  release.md
.trunk/: trunk.yaml
apps/: app  app.cpp
cmake/: uninstall.cmake
demo's/: physics_demo.txt
demos/: physics_demo.txt
development/: animation__state_8cpp.html  animation__state_8cpp__incl.map  animation__state_8cpp__incl.md5  animation__state_8hpp.html  animation__state_8hpp__dep__incl.map  animation__state_8hpp__dep__incl.md5  animation__state_8hpp__incl.map  animation__state_8hpp__incl.md5  animation__state_8hpp_source.html  animator_8cpp.html  animator_8cpp__incl.map  animator_8cpp__incl.md5  animator_8hpp.html  animator_8hpp__dep__incl.map  animator_8hpp__dep__incl.md5  animator_8hpp__incl.map  animator_8hpp__incl.md5  animator_8hpp_source.html  annotated.html  annotated_dup.js  app_8cpp.html  audio__facade_8cpp.html  audio__facade_8hpp.html  audio__facade_8hpp__dep__incl.md5  audio__facade_8hpp__incl.md5  audio__facade_8hpp_source.html  audio__source_8cpp.html  audio__source_8cpp__incl.map  audio__source_8cpp__incl.md5  audio__source_8hpp.html  audio__source_8hpp__dep__incl.md5  audio__source_8hpp__incl.map  audio__source_8hpp__incl.md5  audio__source_8hpp_source.html  base__level__scene_8cpp.html  base__level__scene_8cpp__incl.map  base__level__scene_8cpp__incl.md5  base__level__scene_8hpp.html  base__level__scene_8hpp__incl.map  base__level__scene_8hpp__incl.md5  (+1222 more)
docs/: Component_8hpp_source.html  DEVELOPMENT_GUIDELINES.md  Entity_8hpp_source.html  Game_8hpp_source.html  Renderer_8h_source.html  Renderer_8hpp_source.html  SDL2__framerate_8h_source.html  SDL2__gfxPrimitives_8h_source.html  SDL2__gfxPrimitives__font_8h_source.html  SDL2__imageFilter_8h_source.html  SDL2__rotozoom_8h_source.html  SDL_8h.html  SDL_8h__dep__incl.map  SDL_8h__dep__incl.md5  SDL_8h__incl.map  SDL_8h__incl.md5  SDL_8h_source.html  SDL__assert_8h_source.html  SDL__atomic_8h.html  SDL__atomic_8h__dep__incl.map  SDL__atomic_8h__dep__incl.md5  SDL__atomic_8h__incl.map  SDL__atomic_8h__incl.md5  SDL__atomic_8h_source.html  SDL__audio_8h.html  SDL__audio_8h__dep__incl.map  SDL__audio_8h__dep__incl.md5  SDL__audio_8h__incl.map  SDL__audio_8h__incl.md5  SDL__audio_8h_source.html  SDL__bits_8h.html  SDL__bits_8h__incl.map  SDL__bits_8h__incl.md5  SDL__bits_8h_source.html  SDL__blendmode_8h.html  SDL__blendmode_8h__dep__incl.map  SDL__blendmode_8h__dep__incl.md5  SDL__blendmode_8h__incl.map  SDL__blendmode_8h__incl.md5  SDL__blendmode_8h_source.html  (+2036 more)
main/: animation__state_8cpp.html  animation__state_8hpp.html  animation__state_8hpp_source.html  animator_8cpp.html  animator_8cpp__incl.map  animator_8hpp.html  animator_8hpp__dep__incl.map  animator_8hpp_source.html  annotated.html  app_8cpp.html  audio__source_8cpp.html  audio__source_8cpp__incl.md5  audio__source_8hpp.html  audio__source_8hpp__dep__incl.map  audio__source_8hpp__dep__incl.md5  audio__source_8hpp_source.html  base__level__scene_8cpp.html  base__level__scene_8hpp.html  base__level__scene_8hpp__dep__incl.md5  base__level__scene_8hpp_source.html  base__menu__scene_8cpp.html  base__menu__scene_8hpp.html  base__menu__scene_8hpp__dep__incl.map  base__menu__scene_8hpp_source.html  base__scene_8cpp.html  base__scene_8hpp.html  base__scene_8hpp__dep__incl.map  base__scene_8hpp_source.html  behaviour__script_8cpp.html  behaviour__script_8hpp.html  behaviour__script_8hpp__dep__incl.map  behaviour__script_8hpp__dep__incl.md5  behaviour__script_8hpp__incl.md5  behaviour__script_8hpp_source.html  behaviour__script__manager_8cpp.html  behaviour__script__manager_8cpp__incl.md5  behaviour__script__manager_8hpp.html  behaviour__script__manager_8hpp_source.html  box__collider_8cpp.html  box__collider_8hpp.html  (+576 more)
poc/ec/: CMakeLists.txt  README.md
poc/ec/include/: Component.hpp  Entity.hpp  Game.hpp
poc/ec/src/: Component.cpp  Entity.cpp  Game.cpp  Main.cpp
poc/ecs/: .gitignore  CMakeLists.txt  README.md
poc/ecs/include/components/: box.h  input.h  movement.h  position.h  transform.h
poc/ecs/include/core/: app.h  definitions.h  input_manager.h  position2D.h
poc/ecs/include/entities/: game_object.h
poc/ecs/include/renderer/: render_system.h
poc/ecs/include/scene/: scene.h  scene_manager.h
poc/ecs/include/systems/: movement_system.h  player_control_system.h  scene_system.h  system.h
poc/ecs/src/core/: app.cpp  input_manager.cpp  main.cpp
poc/ecs/src/entities/: game_object.cpp
poc/ecs/src/renderer/: render_system.cpp
poc/ecs/src/scene/: scene.cpp  scene_manager.cpp
poc/ecs/src/systems/: movement_system.cpp  player_control_system.cpp  scene_system.cpp
poc/physics/: CMakeLists.txt  main.cpp
poc/physics/cmake/: FindSDL2.cmake
poc/sdl-input/: CMakeLists.txt  README.md  main.cpp
poc/sdl-input-physics/: CMakeLists.txt  README.md  main.cpp
poc/sdl-render/: CMakeLists.txt  readme.md
poc/sdl-render/include/: Renderer.h  Renderer.hpp  Spritesheet.h  Spritesheet.hpp
poc/sdl-render/src/: Renderer.cpp  Spritesheet.cpp  main.cpp
sandbox/: CMakeLists.txt  main.cpp
src/: sandbox.cpp
staging/: animation__state_8cpp.html  animation__state_8cpp__incl.map  animation__state_8hpp.html  animation__state_8hpp_source.html  animator_8cpp.html  animator_8hpp.html  animator_8hpp_source.html  annotated.html  app_8cpp.html  app_8cpp__incl.md5  audio__source_8cpp.html  audio__source_8cpp__incl.map  audio__source_8hpp.html  audio__source_8hpp__dep__incl.map  audio__source_8hpp__incl.map  audio__source_8hpp_source.html  base__level__scene_8cpp.html  base__level__scene_8hpp.html  base__level__scene_8hpp__incl.md5  base__level__scene_8hpp_source.html  base__menu__scene_8cpp.html  base__menu__scene_8hpp.html  base__menu__scene_8hpp__dep__incl.md5  (+585 more)
tests/: CMakeLists.txt  button_test.cpp  demo_test.cpp  game_object_test.cpp  graph_test.cpp  input_test.cpp  level_test.cpp  physics_test.cpp  prefab_test.cpp
(+15486 files in other folders)
