cmake_minimum_required(VERSION 3.22)
project(SDL-physics)
set(CMAKE_CXX_STANDARD 20)
set(SDL2_DIR "C:/Program Files (x86)/Microsoft/SDK/SDL2")
set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${SDL2_DIR})
list(APPEND CMAKE_MODULE_PATH ${SDL2_DIR}/cmake)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
add_executable(SDL-physics main.cpp)
target_link_libraries(SDL-physics PRIVATE ${SDL2_LIBRARIES})
target_include_directories(SDL-physics PRIVATE ${SDL2_INCLUDE_DIRS})
#VAN AF BLIJVEN GVD